* Patch from Paul Ishenin, adding gtk 2.6 symbols
git-svn-id: trunk@11618 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2224,6 +2224,7 @@ packages/gtk2/src/gtk+/gdk/gdkvisual.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gdk/gdkwindow.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/fnmatch.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtk2.pas svneol=native#text/plain
+packages/gtk2/src/gtk+/gtk/gtkaboutdialog.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkaccelgroup.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkaccellabel.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkaccelmap.inc svneol=native#text/plain
@@ -2245,8 +2246,10 @@ packages/gtk2/src/gtk+/gtk/gtkcelllayout.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcellrenderer.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcellrenderercombo.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcellrendererpixbuf.inc svneol=native#text/plain
+packages/gtk2/src/gtk+/gtk/gtkcellrendererprogress.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcellrenderertext.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcellrenderertoggle.inc svneol=native#text/plain
+packages/gtk2/src/gtk+/gtk/gtkcellview.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcheckbutton.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkcheckmenuitem.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkclipboard.inc svneol=native#text/plain
@@ -2271,6 +2274,7 @@ packages/gtk2/src/gtk+/gtk/gtkenums.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkeventbox.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkexpander.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkfilechooser.inc svneol=native#text/plain
+packages/gtk2/src/gtk+/gtk/gtkfilechooserbutton.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkfilechooserdefault.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkfilechooserdialog.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkfilechooserembed.inc svneol=native#text/plain
@@ -2322,6 +2326,7 @@ packages/gtk2/src/gtk+/gtk/gtkmenu.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkmenubar.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkmenuitem.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkmenushell.inc svneol=native#text/plain
+packages/gtk2/src/gtk+/gtk/gtkmenutoolbutton.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkmessagedialog.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtkmisc.inc svneol=native#text/plain
 packages/gtk2/src/gtk+/gtk/gtknotebook.inc svneol=native#text/plain
