+ tfornode.simply which removes for loops being never executed * handle function results correctly in life dfa * handle for loops with at least one iteration better in life dfa o resolves #8151
git-svn-id: trunk@11624 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8111,6 +8111,8 @@ tests/webtbf/tw11295b.pp svneol=native#text/plain
 tests/webtbf/tw1157a.pp svneol=native#text/plain
 tests/webtbf/tw11619b.pp svneol=native#text/plain
 tests/webtbf/tw11632.pp svneol=native#text/plain
+tests/webtbf/tw11846.pp svneol=native#text/plain
+tests/webtbf/tw11846c.pp svneol=native#text/plain
 tests/webtbf/tw11848a.pp svneol=native#text/plain
 tests/webtbf/tw11849a.pp svneol=native#text/plain
 tests/webtbf/tw11862a.pp svneol=native#text/plain
@@ -8300,6 +8302,8 @@ tests/webtbf/tw8150c.pp svneol=native#text/plain
 tests/webtbf/tw8150e.pp svneol=native#text/plain
 tests/webtbf/tw8150f.pp svneol=native#text/plain
 tests/webtbf/tw8150g.pp svneol=native#text/plain
+tests/webtbf/tw8151b.pp svneol=native#text/plain
+tests/webtbf/tw8151c.pp svneol=native#text/plain
 tests/webtbf/tw8264a.pp svneol=native#text/plain
 tests/webtbf/tw8398.pp svneol=native#text/plain
 tests/webtbf/tw8451.pp svneol=native#text/plain
@@ -8549,7 +8553,8 @@ tests/webtbs/tw1157.pp svneol=native#text/plain
 tests/webtbs/tw1157b.pp svneol=native#text/plain
 tests/webtbs/tw11619.pp svneol=native#text/plain
 tests/webtbs/tw1181.pp svneol=native#text/plain
-tests/webtbs/tw11846.pp svneol=native#text/plain
+tests/webtbs/tw11846a.pp svneol=native#text/plain
+tests/webtbs/tw11846b.pp svneol=native#text/plain
 tests/webtbs/tw11848.pp svneol=native#text/plain
 tests/webtbs/tw11849.pp svneol=native#text/plain
 tests/webtbs/tw11852.pp svneol=native#text/plain
@@ -9315,6 +9320,7 @@ tests/webtbs/tw8145.pp svneol=native#text/plain
 tests/webtbs/tw8148.pp svneol=native#text/plain
 tests/webtbs/tw8150a.pp svneol=native#text/plain
 tests/webtbs/tw8150d.pp svneol=native#text/plain
+tests/webtbs/tw8151a.pp svneol=native#text/plain
 tests/webtbs/tw8153.pp svneol=native#text/plain
 tests/webtbs/tw8153a.pp svneol=native#text/plain
 tests/webtbs/tw8155.pp svneol=native#text/plain
