--- a/.gitattributes
+++ b/.gitattributes
@@ -3286,6 +3286,7 @@ packages/libxml/csrc/xpointer.h svneol=native#text/plain
 packages/libxml/examples/Makefile svneol=native#text/plain
 packages/libxml/examples/Makefile.fpc svneol=native#text/plain
 packages/libxml/examples/exutils.pas svneol=native#text/plain
+packages/libxml/examples/io1.pas svneol=native#text/plain
 packages/libxml/examples/reader1.pas svneol=native#text/plain
 packages/libxml/examples/reader2.pas svneol=native#text/plain
 packages/libxml/examples/test1.xml svneol=native#text/plain
