* new libxml2 samples
git-svn-id: trunk@11634 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3292,6 +3292,8 @@ packages/libxml/examples/reader1.pas svneol=native#text/plain
 packages/libxml/examples/reader2.pas svneol=native#text/plain
 packages/libxml/examples/test1.xml svneol=native#text/plain
 packages/libxml/examples/test2.xml svneol=native#text/plain
+packages/libxml/examples/tree1.pas svneol=native#text/plain
+packages/libxml/examples/tree2.pas svneol=native#text/plain
 packages/libxml/fpmake.pp svneol=native#text/plain
 packages/libxml/src/HTMLparser.inc svneol=native#text/plain
 packages/libxml/src/HTMLtree.inc svneol=native#text/plain
