* xmlxsd helper unit     * removed csrc from libxml directory
git-svn-id: trunk@11654 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3233,56 +3233,6 @@ packages/libpng/fpmake.pp svneol=native#text/plain
 packages/libpng/src/png.pp svneol=native#text/plain
 packages/libxml/Makefile svneol=native#text/plain
 packages/libxml/Makefile.fpc svneol=native#text/plain
-packages/libxml/csrc/DOCBparser.h svneol=native#text/plain
-packages/libxml/csrc/HTMLparser.h svneol=native#text/plain
-packages/libxml/csrc/HTMLtree.h svneol=native#text/plain
-packages/libxml/csrc/Makefile.am svneol=native#text/plain
-packages/libxml/csrc/Makefile.in svneol=native#text/plain
-packages/libxml/csrc/SAX.h svneol=native#text/plain
-packages/libxml/csrc/SAX2.h svneol=native#text/plain
-packages/libxml/csrc/c14n.h svneol=native#text/plain
-packages/libxml/csrc/catalog.h svneol=native#text/plain
-packages/libxml/csrc/chvalid.h svneol=native#text/plain
-packages/libxml/csrc/debugXML.h svneol=native#text/plain
-packages/libxml/csrc/dict.h svneol=native#text/plain
-packages/libxml/csrc/encoding.h svneol=native#text/plain
-packages/libxml/csrc/entities.h svneol=native#text/plain
-packages/libxml/csrc/globals.h svneol=native#text/plain
-packages/libxml/csrc/hash.h svneol=native#text/plain
-packages/libxml/csrc/list.h svneol=native#text/plain
-packages/libxml/csrc/nanoftp.h svneol=native#text/plain
-packages/libxml/csrc/nanohttp.h svneol=native#text/plain
-packages/libxml/csrc/parser.h svneol=native#text/plain
-packages/libxml/csrc/parserInternals.h svneol=native#text/plain
-packages/libxml/csrc/pattern.h svneol=native#text/plain
-packages/libxml/csrc/relaxng.h svneol=native#text/plain
-packages/libxml/csrc/schemasInternals.h svneol=native#text/plain
-packages/libxml/csrc/schematron.h svneol=native#text/plain
-packages/libxml/csrc/threads.h svneol=native#text/plain
-packages/libxml/csrc/tree.h svneol=native#text/plain
-packages/libxml/csrc/uri.h svneol=native#text/plain
-packages/libxml/csrc/valid.h svneol=native#text/plain
-packages/libxml/csrc/xinclude.h svneol=native#text/plain
-packages/libxml/csrc/xlink.h svneol=native#text/plain
-packages/libxml/csrc/xmlIO.h svneol=native#text/plain
-packages/libxml/csrc/xmlautomata.h svneol=native#text/plain
-packages/libxml/csrc/xmlerror.h svneol=native#text/plain
-packages/libxml/csrc/xmlexports.h svneol=native#text/plain
-packages/libxml/csrc/xmlmemory.h svneol=native#text/plain
-packages/libxml/csrc/xmlmodule.h svneol=native#text/plain
-packages/libxml/csrc/xmlreader.h svneol=native#text/plain
-packages/libxml/csrc/xmlregexp.h svneol=native#text/plain
-packages/libxml/csrc/xmlsave.h svneol=native#text/plain
-packages/libxml/csrc/xmlschemas.h svneol=native#text/plain
-packages/libxml/csrc/xmlschemastypes.h svneol=native#text/plain
-packages/libxml/csrc/xmlstring.h svneol=native#text/plain
-packages/libxml/csrc/xmlunicode.h svneol=native#text/plain
-packages/libxml/csrc/xmlversion.h svneol=native#text/plain
-packages/libxml/csrc/xmlversion.h.in svneol=native#text/plain
-packages/libxml/csrc/xmlwriter.h svneol=native#text/plain
-packages/libxml/csrc/xpath.h svneol=native#text/plain
-packages/libxml/csrc/xpathInternals.h svneol=native#text/plain
-packages/libxml/csrc/xpointer.h svneol=native#text/plain
 packages/libxml/examples/Makefile svneol=native#text/plain
 packages/libxml/examples/Makefile.fpc svneol=native#text/plain
 packages/libxml/examples/exutils.pas svneol=native#text/plain
@@ -3339,6 +3289,7 @@ packages/libxml/src/xmlstring.inc svneol=native#text/plain
 packages/libxml/src/xmlunicode.inc svneol=native#text/plain
 packages/libxml/src/xmlversion.inc svneol=native#text/plain
 packages/libxml/src/xmlwriter.inc svneol=native#text/plain
+packages/libxml/src/xmlxsd.pas svneol=native#text/plain
 packages/libxml/src/xpath.inc svneol=native#text/plain
 packages/libxml/src/xpathInternals.inc svneol=native#text/plain
 packages/libxml/src/xpointer.inc svneol=native#text/plain
