* fix writing of goto node to ppu   * replace derefnode with resolveppuidx method that only needs to be     implemented for nodes referencing other nodes   * fix IE when a label is not defined in inline function
git-svn-id: trunk@11697 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8508,6 +8508,8 @@ tests/webtbs/tw11568.pp svneol=native#text/plain
 tests/webtbs/tw1157.pp svneol=native#text/plain
 tests/webtbs/tw1157b.pp svneol=native#text/plain
 tests/webtbs/tw11619.pp svneol=native#text/plain
+tests/webtbs/tw11762.pp svneol=native#text/plain
+tests/webtbs/tw11763.pp svneol=native#text/plain
 tests/webtbs/tw1181.pp svneol=native#text/plain
 tests/webtbs/tw11846a.pp svneol=native#text/plain
 tests/webtbs/tw11846b.pp svneol=native#text/plain
@@ -9424,6 +9426,7 @@ tests/webtbs/uw0701d.pp svneol=native#text/plain
 tests/webtbs/uw0701e.pp svneol=native#text/plain
 tests/webtbs/uw0809.pp svneol=native#text/plain
 tests/webtbs/uw11182.pp svneol=native#text/plain
+tests/webtbs/uw11762.pp svneol=native#text/plain
 tests/webtbs/uw1181.inc svneol=native#text/plain
 tests/webtbs/uw1279.pp svneol=native#text/plain
 tests/webtbs/uw1331.pp svneol=native#text/plain
