--- a/.gitattributes
+++ b/.gitattributes
@@ -8524,6 +8524,8 @@ tests/webtbs/tw11937.pp svneol=native#text/plain
 tests/webtbs/tw12000.pp svneol=native#text/plain
 tests/webtbs/tw1203.pp svneol=native#text/plain
 tests/webtbs/tw1204.pp svneol=native#text/plain
+tests/webtbs/tw12050a.pp svneol=native#text/plain
+tests/webtbs/tw12050b.pp svneol=native#text/plain
 tests/webtbs/tw1207.pp svneol=native#text/plain
 tests/webtbs/tw1222.pp svneol=native#text/plain
 tests/webtbs/tw1223.pp svneol=native#text/plain
