* Bugfixes from Attila Borka:   - Bug fix in the template parser. Bug0012095   - Fixed: CGI applications did not create and populate contentfields (caused AV if someone     tried to access it) for the http request, both the query and content parameters were put     into the queryfields list   - Bug0012094 fix: CGI applications AllowDefaultModule=true did not work for Delphi style calls (it is ok     for querystring parameter passed module names)   - fptemplate.pp->TTemplateParser: Added support for template tag parameters.
git-svn-id: trunk@11747 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1608,6 +1608,7 @@ packages/fcl-res/xml/winpeimagereader.xml svneol=native#text/plain
 packages/fcl-web/Makefile svneol=native#text/plain
 packages/fcl-web/Makefile.fpc svneol=native#text/plain
 packages/fcl-web/fpmake.pp svneol=native#text/plain
+packages/fcl-web/fptemplate.txt svneol=native#text/plain
 packages/fcl-web/src/README svneol=native#text/plain
 packages/fcl-web/src/cgiapp.pp svneol=native#text/plain
 packages/fcl-web/src/custcgi.pp svneol=native#text/plain
