--- a/.gitattributes
+++ b/.gitattributes
@@ -8544,6 +8544,7 @@ tests/webtbs/tw11937.pp svneol=native#text/plain
 tests/webtbs/tw12000.pp svneol=native#text/plain
 tests/webtbs/tw1203.pp svneol=native#text/plain
 tests/webtbs/tw1204.pp svneol=native#text/plain
+tests/webtbs/tw12048.pp svneol=native#text/plain
 tests/webtbs/tw12050a.pp svneol=native#text/plain
 tests/webtbs/tw12050b.pp svneol=native#text/plain
 tests/webtbs/tw12051.pp svneol=native#text/plain
