* files for amd64-freebsd
git-svn-id: trunk@11775 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7180,6 +7180,10 @@ tests/test/cg/obj/freebsd/i386/ctest.o -text
 tests/test/cg/obj/freebsd/i386/tcext3.o -text
 tests/test/cg/obj/freebsd/i386/tcext4.o -text
 tests/test/cg/obj/freebsd/i386/tcext5.o -text
+tests/test/cg/obj/freebsd/x86_64/ctest.o -text
+tests/test/cg/obj/freebsd/x86_64/tcext3.o -text
+tests/test/cg/obj/freebsd/x86_64/tcext4.o -text
+tests/test/cg/obj/freebsd/x86_64/tcext5.o -text
 tests/test/cg/obj/go32v2/i386/ctest.o -text
 tests/test/cg/obj/go32v2/i386/tcext3.o -text
 tests/test/cg/obj/go32v2/i386/tcext4.o -text
