* renamed optunrol into optloop
git-svn-id: trunk@11798 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -312,8 +312,8 @@ compiler/optbase.pas svneol=native#text/plain
 compiler/optcse.pas svneol=native#text/plain
 compiler/optdfa.pas svneol=native#text/plain
 compiler/options.pas svneol=native#text/plain
+compiler/optloop.pas svneol=native#text/plain
 compiler/opttail.pas svneol=native#text/plain
-compiler/optunrol.pas svneol=native#text/plain
 compiler/optutils.pas svneol=native#text/plain
 compiler/owar.pas svneol=native#text/plain
 compiler/owbase.pas svneol=native#text/plain
