* fix by Inoussa OUEDRAOGO to improve UnicodeString property handling, resolves #12224
git-svn-id: trunk@11832 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8561,6 +8561,7 @@ tests/webtbs/tw12186.pp svneol=native#text/plain
 tests/webtbs/tw12202.pp svneol=native#text/plain
 tests/webtbs/tw12214.pp svneol=native#text/plain
 tests/webtbs/tw1222.pp svneol=native#text/plain
+tests/webtbs/tw12224.pp svneol=native#text/plain
 tests/webtbs/tw1223.pp svneol=native#text/plain
 tests/webtbs/tw12233.pp svneol=native#text/plain
 tests/webtbs/tw1228.pp svneol=native#text/plain
