--- a/.gitattributes
+++ b/.gitattributes
@@ -6566,6 +6566,7 @@ tests/tbf/tb0209.pp svneol=native#text/plain
 tests/tbf/tb0210.pp svneol=native#text/plain
 tests/tbf/tb0211.pp svneol=native#text/plain
 tests/tbf/tb0212.pp svneol=native#text/plain
+tests/tbf/tb0213.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
