--- a/.gitattributes
+++ b/.gitattributes
@@ -7169,6 +7169,10 @@ tests/test/cg/obj/beos/i386/ctest.o -text
 tests/test/cg/obj/beos/i386/tcext3.o -text
 tests/test/cg/obj/beos/i386/tcext4.o -text
 tests/test/cg/obj/beos/i386/tcext5.o -text
+tests/test/cg/obj/darwin/arm/ctest.o -text
+tests/test/cg/obj/darwin/arm/tcext3.o -text
+tests/test/cg/obj/darwin/arm/tcext4.o -text
+tests/test/cg/obj/darwin/arm/tcext5.o -text
 tests/test/cg/obj/darwin/i386/ctest.o -text
 tests/test/cg/obj/darwin/i386/tcext3.o -text
 tests/test/cg/obj/darwin/i386/tcext4.o -text
