+ initial implementation of whole-program optimisation framework   + implementation of whole-program devirtualisation   o use:      a) generate whole-program optimisation information (no need         to completely compile the program and all of its units         with -OW/-FW, only the main program is sufficient)       fpc -OWdevirtcalls -FWmyprog.wpo myprog      b) use it to optimise the program       fpc -B -Owdevirtcalls -Fwmyprog.wpo myprog      (the -B is not required, but only sources recompiled during       the second pass will actually be optimised -- if you want,       you can even rebuild the rtl devirtualised for a particular       program; and these options can obviously also be used       together with regular optimisation switches)   o warning:     - there are no checks yet to ensure that you do not use       units optimised for a particular program with another       program (or with a changed version of the same program)
git-svn-id: branches/wpo@11878 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -315,6 +315,7 @@ compiler/options.pas svneol=native#text/plain
 compiler/optloop.pas svneol=native#text/plain
 compiler/opttail.pas svneol=native#text/plain
 compiler/optutils.pas svneol=native#text/plain
+compiler/optvirt.pas svneol=native#text/plain
 compiler/owar.pas svneol=native#text/plain
 compiler/owbase.pas svneol=native#text/plain
 compiler/parabase.pas svneol=native#text/plain
@@ -576,6 +577,9 @@ compiler/vis/cpuinfo.pas svneol=native#text/plain
 compiler/vis/cpunode.pas svneol=native#text/plain
 compiler/vis/cpupara.pas svneol=native#text/plain
 compiler/widestr.pas svneol=native#text/plain
+compiler/wpo.pas svneol=native#text/plain
+compiler/wpobase.pas svneol=native#text/plain
+compiler/wpoinfo.pas svneol=native#text/plain
 compiler/x86/aasmcpu.pas svneol=native#text/plain
 compiler/x86/agx86att.pas svneol=native#text/plain
 compiler/x86/agx86int.pas svneol=native#text/plain
