+ -vq parameter to show message numbers   + -vm<x>,<y> parameter to mask messages <x> and <y>    (both based on a patch submitted by Petr Kristan)   * alphabetically ordered -v<x> option processing code so it's easier     to see which characters are still free (not many anymore)   + some tests for the -vm functionality
git-svn-id: trunk@11888 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7735,6 +7735,10 @@ tests/test/tmath1.pp svneol=native#text/plain
 tests/test/tmcbool2.pp svneol=native#text/plain
 tests/test/tmmx1.pp svneol=native#text/plain
 tests/test/tmove.pp svneol=native#text/plain
+tests/test/tmsg1.pp svneol=native#text/plain
+tests/test/tmsg2.pp svneol=native#text/plain
+tests/test/tmsg3.pp svneol=native#text/plain
+tests/test/tmsg4.pp svneol=native#text/plain
 tests/test/tmt1.pp svneol=native#text/plain
 tests/test/tobject1.pp svneol=native#text/plain
 tests/test/tobject2.pp svneol=native#text/plain
