+ symbol liveness wpo information extracted from smartlinked programs     (-OW/-Owsymbolliveness)   + use symbol liveness information to improve devirtualisation (don't     consider classes created in code that has been dead code stripped).     This requires at least two passes of using wpo (first uses dead code     info to locate classes that are constructed only in dead code,     second pass uses this info to potentially further devirtualise).     I.e.:      1) generate initial liveness and devirtualisation feedback        fpc -FWtt.wpo -OWall tt.pp -Xs- -CX -XX      2) use previously generated feedback, and regenerate new feedback         based on this (i.e., disregard classes created in dead code)        fpc -FWtt-1.wpo -OWall -Fwtt.wo -Owall tt.pp -Xs- -CX -XX      3) use the newly generated feedback (in theory, it is possible         that even more opportunities pop up afterwards; you can         continue until the program does not get smaller anymore)        fpc -Fwtt-1.wpo -Owall tt.pp -CX -XX   * changed all message() to cgmessage() calls so the set codegenerror   * changed static fsectionhandlers field to a regular field called     fwpocomponents   * changed registration of wpocomponents: no longer happens in the     initialization section of their unit, but in the InitWpo routine     (which has been moved from the woinfo to the wpo unit). This way     you can register different classes based on the target/parameters.   + added static method to twpocomponentbase for checking whether     the command line parameters don't conflict with the requested     optimisations (e.g. generating liveness info requires that     smartlinking is turned on)   + added static method to twpocomponentbase to request the     section name
git-svn-id: branches/wpo@11892 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -310,6 +310,7 @@ compiler/oglx.pas svneol=native#text/plain
 compiler/ogmap.pas svneol=native#text/plain
 compiler/optbase.pas svneol=native#text/plain
 compiler/optcse.pas svneol=native#text/plain
+compiler/optdead.pas svneol=native#text/plain
 compiler/optdfa.pas svneol=native#text/plain
 compiler/options.pas svneol=native#text/plain
 compiler/optloop.pas svneol=native#text/plain
