* fix range check error in options handling, resolves #12365 + better error output (print filename and line number) for config file directive errors
git-svn-id: trunk@11898 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8115,6 +8115,10 @@ tests/webtbf/tw11848a.pp svneol=native#text/plain
 tests/webtbf/tw11849a.pp svneol=native#text/plain
 tests/webtbf/tw11862a.pp svneol=native#text/plain
 tests/webtbf/tw12329.pp svneol=native#text/plain
+tests/webtbf/tw12365a.cfg svneol=native#text/plain
+tests/webtbf/tw12365a.pp svneol=native#text/plain
+tests/webtbf/tw12365b.cfg svneol=native#text/plain
+tests/webtbf/tw12365b.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
 tests/webtbf/tw1270.pp svneol=native#text/plain
