+ "weakexternal" support for imported procedures and variables.     the syntax is exactly the same as for "external", except for     the keyword. It is currently only active for Darwin targets.     It should also work at least for Linux targets, but only with     the GNU assembler (which is why it is not activated there)   + test for this functionality
git-svn-id: trunk@12009 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7889,6 +7889,10 @@ tests/test/tunroll1.pp svneol=native#text/plain
 tests/test/tutf81.pp svneol=native#text/plain%3Bcharset%3Dutf-8
 tests/test/tutf82.pp svneol=native#text/plain%3Bcharset%3Dutf-8
 tests/test/tvarset1.pp svneol=native#text/plain
+tests/test/tweaklib1.pp svneol=native#text/plain
+tests/test/tweaklib2.pp svneol=native#text/plain
+tests/test/tweaklib3.pp svneol=native#text/plain
+tests/test/tweaklib4.pp svneol=native#text/plain
 tests/test/twide1.pp svneol=native#text/plain
 tests/test/twide2.pp svneol=native#text/plain
 tests/test/twide3.pp svneol=native#text/plain
