--- a/.gitattributes
+++ b/.gitattributes
@@ -7586,6 +7586,12 @@ tests/test/opt/treg3.pp svneol=native#text/plain
 tests/test/opt/treg4.pp svneol=native#text/plain
 tests/test/opt/tretopt.pp svneol=native#text/plain
 tests/test/opt/tspace.pp svneol=native#text/plain
+tests/test/packages/fcl-db/assertions.pas svneol=native#text/plain
+tests/test/packages/fcl-db/database.ini svneol=native#text/plain
+tests/test/packages/fcl-db/dbftoolsunit.pas svneol=native#text/plain
+tests/test/packages/fcl-db/tdb1.pp svneol=native#text/plain
+tests/test/packages/fcl-db/tdb2.pp svneol=native#text/plain
+tests/test/packages/fcl-db/toolsunit.pas svneol=native#text/plain
 tests/test/packages/fcl-registry/tregistry1.pp svneol=native#text/plain
 tests/test/packages/hash/tmdtest.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw10045.pp svneol=native#text/plain
