--- a/.gitattributes
+++ b/.gitattributes
@@ -906,6 +906,8 @@ packages/aspell/Makefile.fpc svneol=native#text/plain
 packages/aspell/examples/example.pas svneol=native#text/plain
 packages/aspell/fpmake.pp svneol=native#text/plain
 packages/aspell/src/aspell.pp svneol=native#text/plain
+packages/aspell/src/aspelldyn.pp svneol=native#text/plain
+packages/aspell/src/aspelltypes.inc svneol=native#text/plain
 packages/aspell/src/spellcheck.pp svneol=native#text/plain
 packages/bfd/Makefile svneol=native#text/plain
 packages/bfd/Makefile.fpc svneol=native#text/plain
